<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".venue.ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/venueIcon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_linear_gradient"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:text="Sir Georgio's Restaurant" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rating"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_circle_solid_white"
            android:backgroundTint="@android:color/holo_green_dark"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/categoryIcon"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:text="5.5" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categoryTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toBottomOf="@+id/rating"
            app:layout_constraintEnd_toStartOf="@+id/categoryIcon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rating"
            tools:text="Italian Restaurant" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/categoryIcon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_circle_solid_white"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/rating"
            app:layout_constraintEnd_toStartOf="@+id/rating"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/categoryTag"
            app:layout_constraintTop_toTopOf="@+id/rating"
            app:layout_constraintVertical_bias="0.438" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintStart_toStartOf="@+id/website"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            tools:text="No15, North Jattan-Abad, St Peter Square, Tehran, Iran" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:alpha=".2"
            android:background="@drawable/bg_rectangle_solid_white"
            android:backgroundTint="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintStart_toStartOf="@+id/website"
            app:layout_constraintTop_toBottomOf="@+id/website" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:alpha=".2"
            android:background="@drawable/bg_rectangle_solid_white"
            android:backgroundTint="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintStart_toStartOf="@+id/website"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/venueIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Best Abgoosht in Roma" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_circle_solid_white"
            android:backgroundTint="@drawable/color_primary_alpha_10"
            android:drawableEnd="@drawable/ic_like_white"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="18" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/website"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawableTop="@drawable/ic_web"
            android:text="@string/website"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/phone"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/venueIcon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/phone"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawableTop="@drawable/ic_phone"
            android:text="@string/phone"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/map"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/website"
            app:layout_constraintTop_toTopOf="@+id/website" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/map"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:drawableTop="@drawable/ic_location"
            android:text="@string/location"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/phone"
            app:layout_constraintTop_toTopOf="@+id/phone" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.38" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/errorContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/errorMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/try_again"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/retry"
            android:textAllCaps="false" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ThemeOverlay.BlockFetcher.Progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>